# carbonlight

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  carbonlight.py  carbonlight.service  carbonlight.toml  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: DESIGN.md  HARDWARE.md
tests/: conftest.py  test_smoke.py  test_unit.py
