[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "carbonlight"
version = "0.1.0"
description = "Mac-like activity-driven keyboard backlight for ThinkPad laptops"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yannick Dixken", email = "yannick@dixken.de" }]
requires-python = ">=3.11"
dependencies = ["evdev>=1.9"]
keywords = [
  "thinkpad",
  "keyboard",
  "backlight",
  "linux",
  "systemd",
  "x1carbon",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Hardware",
  "Topic :: Utilities",
]

[project.urls]
Homepage   = "https://github.com/ydixken/carbonlight"
Issues     = "https://github.com/ydixken/carbonlight/issues"
Changelog  = "https://github.com/ydixken/carbonlight/blob/main/CHANGELOG.md"

[project.scripts]
carbonlight = "carbonlight:main"

[tool.setuptools]
py-modules = ["carbonlight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  # The daemon catches a broad Exception in cleanup paths intentionally.
  "BLE001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
